Wrapped text at the start of certain listed items with a class to ensure their font-weight is bold in accordance with the base design. Furthermore, adjusted the alignment of lists and the spacing within the table.Also adjusted the align-items property within the body selector to ensure the main container remains centered horizontally within the webpage.

--- a/styles.css
+++ b/styles.css
@@ -8,21 +8,51 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     padding: 1rem;
 }
 
-h1, h2 {
-    font-family: "Young Serif", serif;
-}
+main {
+    width: 327px;
 
-h2 {
-    color: hsl(14, 45%, 36%);
+    h1, h2 {
+        font-family: "Young Serif", serif;
+    }
+
+    h2 {
+        color: hsl(14, 45%, 36%);
+    }
+
+    .bold-text {
+        font-weight: bold;
+    }
+
+    ul, ol {
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+        padding-left: 0;
+        list-style-position: inside;
+    }
+
+    .preparation-container {
+        background-color: hsl(330, 100%, 98%);
+        border-radius: 10px;
+        padding: .5rem;
+
+        .preparation-heading {
+            color: hsl(332, 51%, 32%);
+            font-weight: bold;
+        }
+    }
 }
 
 table {
     width: 100%;
     border-width: 1px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
     caption {
         text-align: left;
